auto-test/tests/chapter_15/invalid_types/scalar_initializer_for_static_array.c

double arr[3] = 1.0;

int main(void)
{
    return 0;
}